<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scr"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/DimGray"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/Gray" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="true"
                android:text="Male" />


            <RadioButton
                android:id="@+id/radioButton_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="false"
                android:text="Female" />
        </RadioGroup>

        <EditText
            android:id="@+id/weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_weight"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <EditText
            android:id="@+id/height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_login"
            android:hint="@string/hint_height"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />

        <TextView
            android:id="@+id/program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Program"
            android:textColor="@color/Gray" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_prog1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="true"
                android:text="Stronglift" />

            <RadioButton
                android:id="@+id/radioButton_prog2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="false"
                android:text="PushPullLeg" />
        </RadioGroup>

        <TextView
            android:id="@+id/trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trainer"
            android:textColor="@color/Gray" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_tra1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="true"
                android:text="Rich Piana" />

            <RadioButton
                android:id="@+id/radioButton_tra2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Orange"
                android:checked="false"
                android:text="Duy Nguyen" />
        </RadioGroup>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/Orange"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


</ScrollView>


